# ros_pcl

./: .gitignore  CMakeLists.txt  icp.cpp  icp_nl.cpp  matrix_transform.cpp  multiple_rgb_vis.cpp  ndt.cpp  outliers.cpp  package.xml  pairwise.cpp  passthrough.cpp  pcl_viewer.cpp  rgb_vis.cpp  ros_pcl_viewer.cpp  setup.py  view_port.cpp  voxel_grid.cpp
include/pclpy/: definitions.h  filterWrapper.h  wrapper.h
include/pclpy/filters/: filterWrapper.h  outliers.h  passthrough.h  voxel_grid.h
include/pclpy/pcdio/: pcdio.h
include/pclpy/registration/: icp.h
include/pclpy/visualization/: pcl_visualizer.h
src/: pcd_io_wrapper.cpp  pcl_common_wrapper.cpp  pcl_icp_wrapper.cpp  pcl_visualizer_wrapper.cpp
src/filters/: pcl_outliers_wrapper.cpp  pcl_passthrough_wrapper.cpp  pcl_voxel_grid_wrapper.cpp  voxel_grid_wrapper.cpp
src/pcdio/: pcd_io_wrapper.cpp
src/pclpy/: _common.py  _wrapper.py
src/pclpy/examples/: icp.py  outlier.py  pass.py  points.py  readpcd.py  visualizer.py  visualizer2.py  voxelgrid.py  writepcd.py
src/pclpy/examples/common/: concatenate.py
src/pclpy/examples/pcdio/: writepcd.py
src/pclpy/examples/visualization/: remove_pointcloud.py  viewports.py  visualizer3.py
src/pclpy/filters/: __init__.py  _pcl_outliers_wrapper_py.py  _pcl_passthrough_wrapper_py.py  _pcl_voxel_grid_wrapper_py.py
src/pclpy/pcdio/: __init__.py  _pcd_io_wrapper_py.py  _pcl_pcdio_wrapper_py.py
src/pclpy/registration/: __init__.py  _pcl_icp_wrapper_py.py
src/pclpy/visualization/: __init__.py  _pcl_visualizer_wrapper_py.py
src/registration/: icp_wrapper.cpp
src/visualization/: pcl_visualizer_wrapper.cpp
